# taskcli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
taskcli/: __init__.py  taskmanager.py
taskcli/classes/: Task.py  TaskList.py  __init__.py
